Исправить замечания